--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -58,7 +58,7 @@ h3{
 .col-center{
     padding: 0 20px;
 }
-.col-fixed-300 {
+.col-fixed-400 {
     width:400px;
 }
 .col-fixed-240{
@@ -371,7 +371,7 @@ nav .navbar-nav li:hover{
     }
 }
 #calendar-widget{
-    border: 1px solid #BDDAEB;
+    border: 1px solid #50875b;
 }
 footer{
     margin-top: 30px;
@@ -560,6 +560,12 @@ table.table-th-bold tr th{
 }
 th.prev, th.next, th.picker-switch{
     cursor: pointer;
+    //font-weight: bold;
+
+}
+th.picker-switch{
+    font-family: "ImpactRegular";
+    color: #555;
 }
 
 .ya-share2{
