--- a/src/AppBundle/Resources/views/Widget/upcomingNews.html.twig
+++ b/src/AppBundle/Resources/views/Widget/upcomingNews.html.twig
@@ -1,4 +1,4 @@
-<div class="title"><h1>Новости</h1></div>
+<div class="title"><h1>НОВОСТИ</h1></div>
 <div>
     {% for e in publications %}
         <h5 style="margin-top: 0"><a href="{{ path('publications',{'url' : e.id}) }}">{{ e.title }}</a></h5>
