--- a/src/AppBundle/Resources/public/less/common.css
+++ b/src/AppBundle/Resources/public/less/common.css
@@ -50,7 +50,7 @@ h3 {
 .col-center {
   padding: 0 20px;
 }
-.col-fixed-300 {
+.col-fixed-400 {
   width: 400px;
 }
 .col-fixed-240 {
@@ -346,7 +346,7 @@ nav .navbar-nav li:hover a {
   background: #CCC;
 }
 #calendar-widget {
-  border: 1px solid #BDDAEB;
+  border: 1px solid #50875b;
 }
 footer {
   margin-top: 30px;
@@ -522,6 +522,10 @@ th.prev,
 th.next,
 th.picker-switch {
   cursor: pointer;
+}
+th.picker-switch {
+  font-family: "ImpactRegular";
+  color: #555;
 }
 .ya-share2 {
   text-align: right;
