--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -226,7 +226,8 @@
                     </div>
                     <div class="col-xs-9">
                         <div class="text-uppercase" style="color: #7e7878">
-                            Москва, ул. Радищевская, 16,7 <br />
+                            101000, г. Москва, пер. Большой Спасоглинищевский, <br />
+                            д. 9/1, строен. 10, помещение I, комната № 2
                         </div>
                     </div>
                 </div>
