--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -225,7 +225,7 @@
                         <img src="{{ asset('bundles/app/images/icons/geo.png') }}" class="contact-icon" style="margin-top: -8px;" alt="Контакты">
                     </div>
                     <div class="col-xs-9">
-                        <div class="text-uppercase" style="color: #7e7878">
+                        <div class="text-uppercase" style="color: #7e7878; margin-top: -14px;">
                             101000, г. Москва, пер. Большой Спасоглинищевский, <br />
                             д. 9/1, строен. 10, помещение I, комната № 2
                         </div>
