--- a/src/AppBundle/Resources/views/Calendar/calendar.html.twig
+++ b/src/AppBundle/Resources/views/Calendar/calendar.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="title"><h1 itemprop="name">Календарь медицинских событий</h1></div>
+    <div class="title"><h1 itemprop="name">Календарь событий</h1></div>
 
     {% include 'AppBundle:Calendar:render.html.twig' %}
 
