--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -109,7 +109,7 @@
             {% endfor %}
             <br />
             <div class="text-left">
-                <a href="{{ path('publications_by_category') }}" style="font-size: 15px; text-decoration: underline;"><b>Все мероприятия сельского хозяйства</b></a>
+                <a href="{{ path('events') }}" style="font-size: 15px; text-decoration: underline;"><b>Все мероприятия сельского хозяйства</b></a>
             </div>
         </div>
     </div>
