--- a/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventsmap.html.twig
@@ -7,14 +7,14 @@
 {% endblock %}
 
 {% block content %}
-    <div class="title"><h1>Карта медицинских событий</h1></div>
+    <div class="title"><h1>Карта мероприятий</h1></div>
     <ol class="breadcrumb">
         <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
             <a itemprop="url" href="/"><span itemprop="title">Главная</span></a>
         </li>
         <li itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb">
-            <a itemprop="url" href="{{ path('events') }}"><span itemprop="title">Медицинские мероприятия</span></a></li>
-        <li class="active">Карта медицинских мероприятий</li>
+            <a itemprop="url" href="{{ path('events') }}"><span itemprop="title">мероприятия</span></a></li>
+        <li class="active">Карта мероприятий</li>
     </ol>
 
     <br />
