--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -66,7 +66,16 @@
                 <div class="title text-uppercase"><div>Регистрация</div></div>
                 <br />
                 {{ form_start(form, {'action': path('fos_user_registration_register'), 'attr': {'id': 'registration_form'}}) }}
-                {{ form_widget(form) }}
+                {{ form_row(form.email) }}
+                {{ form_row(form.plainPassword) }}
+                {{ form_row(form.lastName) }}
+                {{ form_row(form.firstName) }}
+                {{ form_row(form.surName) }}
+                {{ form_row(form.birthDate) }}
+                {{ form_row(form.status) }}
+                {{ form_row(form.phone) }}
+                <div style="font-style: italic; text-align: right">Выберите те специальности, по которым вы хотите видеть новости</div>
+                {{ form_row(form.specialty) }}
                 <div class="row">
                     <div class="col-sm-12 ">
                         <br />
