--- a/src/AdminBundle/Resources/views/menu.html.twig
+++ b/src/AdminBundle/Resources/views/menu.html.twig
@@ -14,6 +14,12 @@
             </a>
         </li>
         <li class="">
+            <a href="{{ path('admin_rss_list') }}">
+                <i class="glyphicon glyphicon-align-justify"></i>
+                RSS Сайты
+            </a>
+        </li>
+        <li class="">
             <a href="{{ path('admin_event_list') }}">
                 <i class="glyphicon glyphicon-info-sign"></i>
                 События
