--- a/src/AdminBundle/Resources/views/Rss/show.html.twig
+++ b/src/AdminBundle/Resources/views/Rss/show.html.twig
@@ -22,7 +22,7 @@
                     </td>
                 </tr>
                 <tr>
-                    {{ item.description | raw }}
+                    <td colspan="3">{{ item.description | raw }}</td>
                 </tr>
             {% endfor%}
         </table>
