--- a/src/AppBundle/Resources/public/less/common.less
+++ b/src/AppBundle/Resources/public/less/common.less
@@ -953,3 +953,8 @@ nav .navbar-nav li.active a:hover{
 .daterangepicker td.active, .daterangepicker td.active:hover{
     background-color: #dd0000;
 }
+.commercial-item{
+    background: rgba(234, 177, 177, 0.34);
+    border: 1px solid rgba(221, 0, 0, 0.26);
+    padding: 10px 20px;
+}
