--- a/src/AppBundle/Resources/views/Publication/eventList.html.twig
+++ b/src/AppBundle/Resources/views/Publication/eventList.html.twig
@@ -121,9 +121,12 @@
                         <img src="{{ p.preview.path }}" class="img-thumbnail" alt="{{ p.title }}" title="{{ p.title }}">
                     </div>
                     <div class="col-xs-12 col-sm-9">
-                        <div class="p-date">{{ p.start | date('d.m.Y') }} - {{ p.end | date('d.m.Y') }}</div>
+                        {% if p.city != null %}
+                            <span class="p-city">г. {{ p.city }}, </span>
+                        {% endif %}
+                        <span class="p-date">{{ p.start | date('d.m.Y') }} - {{ p.end | date('d.m.Y') }}</span>
                         <div class="p-title">
-                            <a href="{{ path('event',{'url' : p.id }) }}">{{ p.title }}</a>
+                            <a href="{{ path('event',{'url' : p.slug }) }}">{{ p.title }}</a>
                         </div>
                         <div class="new-body">{{ p.anons }}</div>
                     </div>
@@ -133,7 +136,7 @@
                     <div class="col-xs-12">
                         <div class="p-date">{{ p.start | date('d.m.Y') }} - {{ p.end | date('d.m.Y') }}</div>
                         <div class="p-title">
-                            <a href="{{ path('event',{'url' : p.id }) }}">{{ p.title }}</a>
+                            <a href="{{ path('event',{'url' : p.slug }) }}">{{ p.title }}</a>
                         </div>
                         <div class="new-body">{{ p.anons }}</div>
                     </div>
