--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -100,7 +100,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="title">
-                <a href="{{ path('news') }}"><h1 class="title">Публикации</h1></a>
+                <a href="{{ path('news') }}"><h1 class="title">Новости медицины</h1></a>
                 {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                     <a href="#" id="submit-new" class="btn btn-default">Написать новость</a>
                 {% endif %}
