--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -162,20 +162,20 @@
                         {#<a target="_blank" href="https://www.youtube.com/channel/UCgS0JAUqUpDojH6rIDXGfZA"><img src="{{ asset('bundles/app/images/icons/gp.png') }}" class="social-icon"></a>#}
                         {#<a target="_blank" href="http://ok.ru/group/57034519412770"><img src="{{ asset('bundles/app/images/icons/od.png') }}" class="social-icon"></a>#}
                         {#<img src="{{ asset('bundles/app/images/icons/icons.png') }}">#}
-                        <noindex><a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте"></a></noindex>
-                        <noindex><a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" style="width: 39px"></a></noindex>
-                            <noindex><a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" alt="Facebook"></a></noindex>
+                        <noindex><a href="https://new.vk.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_1.png') }}" alt="ВКонтакте" class="social-icon"></a></noindex>
+                        <noindex><a href="https://twitter.com/medalmanah_ru" target="_blank"><img src="{{ asset('bundles/app/images/icons/tw.png') }}" alt="twitter" class="social-icon" style="width: 39px"></a></noindex>
+                        <noindex><a href="https://www.facebook.com/medalmanah" target="_blank"><img src="{{ asset('bundles/app/images/icons/icons_3.png') }}" class="social-icon" alt="Facebook"></a></noindex>
                     </div>
                 </div>
                 <div class="contacts row">
                     <br /><br />
                     <div class="col-md-offset-1 col-xs-2">
-                        <img src="{{ asset('bundles/app/images/icons/geo.png') }}" class="contact-icon" style="margin-top: -8px;" alt="Контакты">
+                        {#<img src="{{ asset('bundles/app/images/icons/geo.png') }}" class="contact-icon" style="margin-top: -8px;" alt="Контакты">#}
                     </div>
                     <div class="col-xs-9">
-                        <div class="text-uppercase" style="color: #7e7878">
-                            Москва, ул. Радищевская, 16,7 <br />
-                        </div>
+                        {#<div class="text-uppercase" style="color: #7e7878">#}
+                            {#Москва, ул. Радищевская, 16,7 <br />#}
+                        {#</div>#}
                     </div>
                 </div>
             </div>
