--- a/src/AppBundle/Resources/views/Publication/publication.item.html.twig
+++ b/src/AppBundle/Resources/views/Publication/publication.item.html.twig
@@ -25,10 +25,31 @@
                 </a>
             </div>
             <div class="col-xs-12 col-sm-9">
-                <a href="{{ publicationUrl }}">
-                    <h2 class="publication-title" itemprop="headline">{{ publication.title }}</h2>
-                </a>
-                <p class="new-body" itemprop="description">{{ publication.anons }}</p>
+                <div class="publication-anons">
+                    <a href="{{ publicationUrl }}">
+                        <h2 class="publication-title" itemprop="headline">{{ publication.title }}</h2>
+                    </a>
+                    <p class="new-body" itemprop="description">{{ publication.anons }}</p>
+                </div>
+                <div class="row publication-footerline">
+                    {% if publication.preview.path is defined %}
+                        <div class="col-xs-6 col-md-4 text-left">
+                            <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
+                            <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
+                        </div>
+                        <div class="col-xs-6 col-md-5 text-right">
+                            <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
+                        </div>
+                    {% else %}
+                        <div class="col-xs-6 col-md-4  text-left">
+                            <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
+                            <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
+                        </div>
+                        <div class="col-xs-6 col-md-5 col-md-offset-3 text-right">
+                            <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
+                        </div>
+                    {% endif %}
+                </div>
             </div>
         {% else %}
             <div class="col-xs-12">
@@ -36,28 +57,29 @@
                     <h2 class="publication-title" itemprop="headline">{{ publication.title }}</h2>
                 </a>
                 <p class="new-body" itemprop="description">{{ publication.anons }}</p>
+                <div class="row publication-footerline">
+                    {% if publication.preview.path is defined %}
+                        <div class="col-xs-6 col-md-4 text-left">
+                            <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
+                            <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
+                        </div>
+                        <div class="col-xs-6 col-md-5 text-right">
+                            <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
+                        </div>
+                    {% else %}
+                        <div class="col-xs-6 col-md-4  text-left">
+                            <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
+                            <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
+                        </div>
+                        <div class="col-xs-6 col-md-5 col-md-offset-3 text-right">
+                            <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
+                        </div>
+                    {% endif %}
+                </div>
             </div>
         {% endif %}
     </div>
-    <div class="row publication-footerline">
-        {% if publication.preview.path is defined %}
-            <div class="col-xs-6 col-md-4 col-md-offset-3 text-left">
-                <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
-                <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
-            </div>
-            <div class="col-xs-6 col-md-5 text-right">
-                <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
-            </div>
-        {% else %}
-            <div class="col-xs-6 col-md-4  text-left">
-                <span class="publication-date" itemprop="datePublished" content="{{ publication.created | date('Y-m-d') }}"><span class="glyphicon glyphicon-calendar hidden-xs"></span> {{ publication.created | date('d.m.Y') }}</span>
-                <span class="hidden" itemprop="dateModified" content="{{ publication.created | date('Y-m-d') }}">{{ publication.created | date('d.m.Y') }}</span>
-            </div>
-            <div class="col-xs-6 col-md-5 col-md-offset-3 text-right">
-                <a href="{{ publicationUrl }}#comment" class="publication-comment"><span class="glyphicon glyphicon-comment"></span> <span class="hidden-xs">комментарии</span></a>
-            </div>
-        {% endif %}
-    </div>
+
 
     <div class="hidden">
         <noindex>Автор: <span itemprop="author">{{ publication.author.name }}</span></noindex>
